resolve shifting background

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -109,6 +109,7 @@ body * {
 #top {
     background-image: var(--url);
     background-size: cover;
+    background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6, strong {
